<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_load_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_white_bg"
        android:text="@string/main_btn_start"
        android:textColor="@drawable/button_white_text"
        android:textStyle="bold" />
    
    <Button 
        android:id="@+id/btn_quick_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_load_contacts"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_white_bg"
        android:text="@string/main_btn_quick"
        android:textColor="@drawable/button_white_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:text="@string/tv_version" />

</RelativeLayout>