<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wait"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:textColor="#696969"
        android:text="@string/name_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textColor="#db4c5a"
        android:text=""
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:visibility="invisible" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white_bg"
            android:text="@string/btn1_text"
            android:textColor="#db4c5a"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white_bg"
            android:text="@string/btn2_text"
            android:textColor="#db4c5a"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white_bg"
            android:text="@string/btn3_text"
            android:textColor="#db4c5a"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
